configured babel-import-plugin to import riot tags

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-jest": "^19.0.0",
+    "babel-plugin-inline-import": "^3.0.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015-riot": "^1.1.0",
     "grunt": "^1.0.3",
