--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,11 @@
 {
+  "plugins": [
+    [
+      "babel-plugin-inline-import",
+      {
+        "extensions": [".tag"]
+      }
+    ]
+  ],
   "presets": ["babel-preset-es2015-riot"]
 }
